--- a/Worksheet 1 Case study I (Word suggestion) .ipynb
+++ b/Worksheet 1 Case study I (Word suggestion) .ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f9655ac2",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3fa3dcb1",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c48417a1",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['a', 'text', 'data', 'you', 'your', 'can', 'replace', 'sample', 'own', 'with', 'is', 'this']\n"
+      "['this', 'a', 'you', 'is', 'with', 'sample', 'can', 'your', 'text', 'data', 'own', 'replace']\n"
      ]
     }
    ],
@@ -100,32 +100,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fb109b31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Initialize Distance Matrix\n"
+    "# Initialize Distance Matrix\n",
+    "import numpy as np\n",
+    "dist_matrix = np.zeros((len(text_tokens), len(text_tokens)))\n",
+    "print(dist_matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e64da219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.] \t this\n",
+      "[0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0.] \t a\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.] \t you\n",
+      "[0. 1. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.] \t is\n",
+      "[0. 0. 1. 0. 0. 0. 0. 1. 0. 0. 0. 0.] \t with\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0.] \t sample\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1.] \t can\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0.] \t your\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.] \t text\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.] \t data\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0.] \t own\n",
+      "[1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.] \t replace\n"
+     ]
+    }
+   ],
    "source": [
-    "# Building Co-occurrence Matrix\n"
+    "# Building Co-occurrence Matrix\n",
+    "for i in range(len(text_tokens)):\n",
+    "    for j in range(len(text_tokens)):\n",
+    "        if i != j:\n",
+    "            dist_matrix[i][j] = text.count(text_tokens[i] + \" \" + text_tokens[j])\n",
+    "    print(dist_matrix[i], \"\\t\", text_tokens[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "eced5458",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t this\t a\t you\t is\t with\t sample\t can\t your\t text\t data\t own\t replace\n",
+      "this \t0 \t0 \t0 \t0 \t1 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t\n",
+      "a \t0 \t0 \t0 \t0 \t0 \t1 \t0 \t0 \t0 \t0 \t0 \t0 \t\n",
+      "you \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t\n",
+      "is \t0 \t1 \t0 \t0 \t1 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t\n",
+      "with \t0 \t0 \t1 \t0 \t0 \t0 \t0 \t1 \t0 \t0 \t0 \t0 \t\n",
+      "sample \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t1 \t0 \t0 \t0 \t\n",
+      "can \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t1 \t\n",
+      "your \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t1 \t0 \t\n",
+      "text \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t\n",
+      "data \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t\n",
+      "own \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t1 \t0 \t0 \t\n",
+      "replace 1 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t\n"
+     ]
+    }
+   ],
    "source": [
-    "# Print Distance Matrix\n"
+    "# Print Distance Matrix\n",
+    "for k in range (len(text_tokens)):\n",
+    "    print(\"\\t\", text_tokens[k], end=\"\")\n",
+    "print()\n",
+    "for i in range(len(text_tokens)):\n",
+    "    if(text_tokens[i] == \"replace\"):\n",
+    "        print(text_tokens[i], \"\", end=\"\")\n",
+    "    else:\n",
+    "        print(text_tokens[i], \"\\t\", end=\"\")\n",
+    "    for j in range(len(text_tokens)):\n",
+    "        print(int(dist_matrix[i][j]), \"\\t\", end=\"\")\n",
+    "    print()"
    ]
   },
   {
@@ -138,18 +215,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "f729d2de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample\n",
+      "1.0\n",
+      "text\n"
+     ]
+    }
+   ],
    "source": [
     "# Ask user to input a word\n",
-    "\n",
+    "user_input = input(\"Enter a word: \")\n",
+    "print(user_input)\n",
     "\n",
     "# Find top suggestion\n",
-    "\n",
+    "if user_input in text_tokens:\n",
+    "    index_of_user_input = text_tokens.index(user_input)\n",
+    "    print(max(dist_matrix[index_of_user_input]))\n",
     "\n",
     "# Print Top Suggestion\n",
+    "for i in range(len(text_tokens)):\n",
+    "    if(dist_matrix[index_of_user_input][i] == max(dist_matrix[index_of_user_input])):\n",
+    "        print(text_tokens[i])\n",
     "\n"
    ]
   },
