--- a/Worksheet 1 Case study I (Word suggestion) .ipynb
+++ b/Worksheet 1 Case study I (Word suggestion) .ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f9655ac2",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3fa3dcb1",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c48417a1",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['this', 'a', 'you', 'is', 'with', 'sample', 'can', 'your', 'text', 'data', 'own', 'replace']\n"
+      "['text', 'data', 'you', 'your', 'this', 'a', 'with', 'own', 'is', 'sample', 'replace', 'can']\n"
      ]
     }
    ],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "fb109b31",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "e64da219",
    "metadata": {},
    "outputs": [
@@ -140,18 +140,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.] \t this\n",
-      "[0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0.] \t a\n",
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.] \t you\n",
-      "[0. 1. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.] \t is\n",
-      "[0. 0. 1. 0. 0. 0. 0. 1. 0. 0. 0. 0.] \t with\n",
-      "[0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0.] \t sample\n",
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1.] \t can\n",
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0.] \t your\n",
       "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.] \t text\n",
       "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.] \t data\n",
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0.] \t own\n",
-      "[1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.] \t replace\n"
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.] \t you\n",
+      "[0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0.] \t your\n",
+      "[0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0.] \t this\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0.] \t a\n",
+      "[0. 0. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0.] \t with\n",
+      "[0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.] \t own\n",
+      "[0. 0. 0. 0. 0. 1. 1. 0. 0. 0. 0. 0.] \t is\n",
+      "[1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.] \t sample\n",
+      "[0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.] \t replace\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0.] \t can\n"
      ]
     }
    ],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "eced5458",
    "metadata": {},
    "outputs": [
@@ -174,19 +174,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\t this\t a\t you\t is\t with\t sample\t can\t your\t text\t data\t own\t replace\n",
-      "this \t0 \t0 \t0 \t0 \t1 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t\n",
-      "a \t0 \t0 \t0 \t0 \t0 \t1 \t0 \t0 \t0 \t0 \t0 \t0 \t\n",
-      "you \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t\n",
-      "is \t0 \t1 \t0 \t0 \t1 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t\n",
-      "with \t0 \t0 \t1 \t0 \t0 \t0 \t0 \t1 \t0 \t0 \t0 \t0 \t\n",
-      "sample \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t1 \t0 \t0 \t0 \t\n",
-      "can \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t1 \t\n",
-      "your \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t1 \t0 \t\n",
+      "\t text\t data\t you\t your\t this\t a\t with\t own\t is\t sample\t replace\t can\n",
       "text \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t\n",
       "data \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t\n",
-      "own \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t1 \t0 \t0 \t\n",
-      "replace 1 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t\n"
+      "you \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t\n",
+      "your \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t1 \t0 \t0 \t0 \t0 \t\n",
+      "this \t0 \t0 \t0 \t0 \t0 \t0 \t1 \t0 \t0 \t0 \t0 \t0 \t\n",
+      "a \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t1 \t0 \t0 \t\n",
+      "with \t0 \t0 \t1 \t1 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t\n",
+      "own \t0 \t1 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t\n",
+      "is \t0 \t0 \t0 \t0 \t0 \t1 \t1 \t0 \t0 \t0 \t0 \t0 \t\n",
+      "sample \t1 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t\n",
+      "replace 0 \t0 \t0 \t0 \t1 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t\n",
+      "can \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t0 \t1 \t0 \t\n"
      ]
     }
    ],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "f729d2de",
    "metadata": {},
    "outputs": [
@@ -223,26 +223,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample\n",
-      "1.0\n",
-      "text\n"
+      "Top suggestion:  with\n"
      ]
     }
    ],
    "source": [
     "# Ask user to input a word\n",
     "user_input = input(\"Enter a word: \")\n",
-    "print(user_input)\n",
     "\n",
     "# Find top suggestion\n",
     "if user_input in text_tokens:\n",
     "    index_of_user_input = text_tokens.index(user_input)\n",
-    "    print(max(dist_matrix[index_of_user_input]))\n",
+    "    max_value=max(dist_matrix[index_of_user_input])\n",
+    "    index_of_max_value = np.where(dist_matrix[index_of_user_input] == max_value)\n",
+    "    print(\"Top suggestion: \", text_tokens[index_of_max_value[0][0]])\n",
     "\n",
     "# Print Top Suggestion\n",
-    "for i in range(len(text_tokens)):\n",
-    "    if(dist_matrix[index_of_user_input][i] == max(dist_matrix[index_of_user_input])):\n",
-    "        print(text_tokens[i])\n",
     "\n"
    ]
   },
