--- a/Worksheet 1 Case study I (Word suggestion) .ipynb
+++ b/Worksheet 1 Case study I (Word suggestion) .ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "f9655ac2",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "3fa3dcb1",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "c48417a1",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "fb109b31",
    "metadata": {},
    "outputs": [
@@ -108,31 +108,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n"
+      "[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]\n"
      ]
     }
    ],
    "source": [
     "# Initialize Distance Matrix\n",
-    "import numpy as np\n",
-    "dist_matrix = np.zeros((len(text_tokens), len(text_tokens)))\n",
+    "dist_matrix = []\n",
+    "num_words = len(text_tokens)\n",
+    "for i in range (len(text_tokens)):\n",
+    "        dist_matrix.append([0]*num_words)\n",
     "print(dist_matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "e64da219",
    "metadata": {},
    "outputs": [
@@ -140,18 +131,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.] \t text\n",
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.] \t data\n",
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.] \t you\n",
-      "[0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0.] \t your\n",
-      "[0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0.] \t this\n",
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0.] \t a\n",
-      "[0. 0. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0.] \t with\n",
-      "[0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.] \t own\n",
-      "[0. 0. 0. 0. 0. 1. 1. 0. 0. 0. 0. 0.] \t is\n",
-      "[1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.] \t sample\n",
-      "[0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.] \t replace\n",
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0.] \t can\n"
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] \t text\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] \t data\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] \t you\n",
+      "[0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0] \t your\n",
+      "[0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0] \t this\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0] \t a\n",
+      "[0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0] \t with\n",
+      "[0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] \t own\n",
+      "[0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0] \t is\n",
+      "[1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] \t sample\n",
+      "[0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0] \t replace\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0] \t can\n"
      ]
     }
    ],
@@ -166,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "eced5458",
    "metadata": {},
    "outputs": [
@@ -215,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "id": "f729d2de",
    "metadata": {},
    "outputs": [
@@ -223,7 +214,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Top suggestion:  with\n"
+      "Top suggestion:  text\n"
      ]
     }
    ],
@@ -235,8 +226,8 @@
     "if user_input in text_tokens:\n",
     "    index_of_user_input = text_tokens.index(user_input)\n",
     "    max_value=max(dist_matrix[index_of_user_input])\n",
-    "    index_of_max_value = np.where(dist_matrix[index_of_user_input] == max_value)\n",
-    "    print(\"Top suggestion: \", text_tokens[index_of_max_value[0][0]])\n",
+    "    max_index = dist_matrix[index_of_user_input].index(max_value)\n",
+    "    print(\"Top suggestion: \", text_tokens[max_index])\n",
     "\n",
     "# Print Top Suggestion\n",
     "\n"
